[project]
name = "spacetime"
version = "0.1.0"
description = "Time registration on projects"
authors = [
    {name = "Jan Magne Andersen",email = "jan.magne.andersen@spacenorway.no"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
